add: add k8s deployment v1